Sun Oct 14 00:53:14 BST 2007  Colin Watson  <cjwatson@debian.org>

	* po/man-db.pot, po/*.po: Update.

Sun Oct 14 00:49:31 BST 2007  Colin Watson  <cjwatson@debian.org>

	* man/Rules.man (clean-local): Remove; we don't need to worry about
	  removing empty directories in separated build trees.
	* man/Makefile.in, man/de.UTF-8/Makefile.in,
	  man/es.UTF-8/Makefile.in, man/fr.UTF-8/Makefile.in,
	  man/it.UTF-8/Makefile.in, man/ja.UTF-8/Makefile.in: Regenerate.

Sun Oct 14 00:40:26 BST 2007  Colin Watson  <cjwatson@debian.org>

	* man-db.lsm: Move to ...
	* docs/man-db.lsm: ... here.
	* Makefile.am, docs/Makefile.am: Move man-db.lsm reference.
	* Makefile.in, docs/Makefile.in: Regenerate.

Sun Oct 14 00:33:10 BST 2007  Colin Watson  <cjwatson@debian.org>

	* README: Remove several restrictions lifted by the conversion to
	  Automake. Remove documentation of how to install native language
	  manual pages, since this is now done unconditionally. Remove
	  documentation of the update target, which no longer exists and
	  should no longer be needed.

	* docs/NEWS: Document conversion to Automake.

Sun Oct 14 00:22:31 BST 2007  Colin Watson  <cjwatson@debian.org>

	Convert to Automake. This fixes VPATH builds, fixes a number of bugs
	in areas such as dependency generation, provides new features such
	as 'make distcheck', moves complexity into autogenerated code, and
	prepares the way for using Gnulib more effectively.

	* makefile.in, include/Defines.in: Remove.
	* GNUmakefile.in, lib/Makefile.in, libdb/Makefile.in,
	  man/Makefile.in, manual/Makefile.in, src/Makefile.in: Translate to
	  Automake and move to ...
	* Makefile.am, lib/Makefile.am, libdb/Makefile.am, man/Makefile.am,
	  manual/Makefile.am, src/Makefile.am: ... here.
	* docs/Makefile.am, tools/Makefile.am: Build these directories
	  separately.
	* man/Rules.man, man/de.UTF-8/Makefile.am, man/es.UTF-8/Makefile.am,
	  man/fr.UTF-8/Makefile.am, man/it.UTF-8/Makefile.am,