@@ -1,3 +1,7 @@
+Sun Oct 14 01:04:41 BST 2007  Colin Watson  <cjwatson@debian.org>
+
+	* autogen.sh: Use 'autoreconf -i' rather than reinventing the wheel.
+
 Sun Oct 14 00:53:14 BST 2007  Colin Watson  <cjwatson@debian.org>
 
 	* po/man-db.pot, po/*.po: Update.
